--- a/hedges-bridges/src/Styles/navStyles.css
+++ b/hedges-bridges/src/Styles/navStyles.css
@@ -62,13 +62,14 @@
     display: none;
 }
 
-hr {
+.divider{
     display: none;
 }
 
 .Menu:hover {
     color: #fdf4dc;
 }
+
 
 @media(max-width: 768px) {
     .navbar-links {
@@ -110,6 +111,7 @@ hr {
     }
 
     .divider {
+        display: block;
         margin-top: 25px;
     }
 }
