--- a/hedges-bridges/src/Styles/About.css
+++ b/hedges-bridges/src/Styles/About.css
@@ -1,7 +1,68 @@
+a{
+    text-decoration: none;
+    color: #fece;
+}
 .altTitle{
     display:none;
 }
 
+.aboutContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 12px 25px;
+    width: fit-content;
+} 
+.aboutContent h2{
+    display: flex;
+    justify-content: center;
+    padding-top: 35px;
+    padding-bottom: 25px;
+} 
+.aboutContent p{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.aboutContent ul li{
+    padding-top: 18px;
+    padding-bottom: 14px;
+    list-style-type: disc ;
+}
+.aboutContent ul li::marker{
+    font-size: 30px;
+    color: #a48d07;
+}
+.exploreCards{
+    width: 68%;
+    height: 83px;
+    background-color: #0D151C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}   
+.pointers{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 33px;
+    justify-content: center;
+    align-items: center;
+    padding:47px 15px;
+}
+.arrowRight{
+    font-size: 24px;
+    color:#000000;
+    background-color: #a48d07;
+    width: 45px;
+    height: 45px;
+    margin-left: 15px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @media (max-width:800px) {
     .altTitle{
         display: block;
@@ -9,4 +70,4 @@
     .mainTitle{
         display: none;
     }
-}
+} 
