--- a/hedges-bridges/src/Styles/Contact.css
+++ b/hedges-bridges/src/Styles/Contact.css
@@ -39,7 +39,8 @@
 .contactForm{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
 }
 .contactForm label{
     padding-top: 25px;
@@ -57,6 +58,7 @@
 
 .formField textarea{
     height: 120px;
+    padding-top: 8px;
 }
 .contactForm label{
     margin-left: 22px;
@@ -98,17 +100,42 @@
     color: #a48d07;
 }
 
+.form h2{
+    padding-bottom: 22px;
+}
+
+.revForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+@media (max-width:425px) {
+    .contactForm .formField input{
+        width:285px
+    }
+
+    .contactForm .formField textarea{
+        width: 285px;
+    }
+}
 
 
 @media (max-width:450px) {
     .office{
         width:300px;
     }
+
 }
 
 
-@media (max-width:650px) {
+@media (max-width:680px) {
     .contactForm input{
-        width: 450px;
+        width: 380px;
+    }
+    
+    .formField textarea{
+        width: 380px;
     }
 }
