--- a/hedges-bridges/src/Styles/navStyles.css
+++ b/hedges-bridges/src/Styles/navStyles.css
@@ -71,7 +71,7 @@
 }
 
 
-@media(max-width: 768px) {
+@media(max-width: 1026px) {
     .navbar-links {
         display: none;
         flex-direction: column;
@@ -85,11 +85,11 @@
     }
 
     .navbar-links li {
-        padding: 18px;
+        padding: 8px ;
     }
 
     .navbar-links.active {
-        display: flex
+        display: flex;
     }
 
     .Menu {
