--- a/hedges-bridges/src/Styles/About.css
+++ b/hedges-bridges/src/Styles/About.css
@@ -63,14 +63,14 @@ a {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 33px;
+    gap: 23px;
     justify-content: center;
     align-items: center;
     padding: 47px 15px;
     margin-bottom: 120px;
 }
 
-.arrowRight {
+/* .arrowRight {
     font-size: 24px;
     color: #fece;
     width: 40px;
@@ -80,7 +80,7 @@ a {
     justify-content: center;
     align-items: center;
 }
-
+ */
 @media (max-width:970px) {
     .pointers {
         margin-bottom: 0;
