--- a/hedges-bridges/src/Styles/publications.css
+++ b/hedges-bridges/src/Styles/publications.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     width: 100%;
     margin-top: 28px;
     margin-bottom: 220px;
@@ -12,17 +12,16 @@
 .pubCard{
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     flex-direction: row;
     width: 600px;
     height: fit-content;
-    /* background-color: #0D151C; */
-    background-image: url('../assets/pubImage.jpg');
+    background-color: #0D151C;
+    /* background-image: url('../assets/pubImage.jpg'); */
     /* background-position: center; */
     background-size: cover;
     border: 1 px solid #0D151C;
     border-radius: 8px;
-    padding: 0px 22px;
+    padding: 0 8px;
     box-sizing: border-box;
 }
 
@@ -42,17 +41,33 @@
    
 }
 .details{
-    display: flexbox;
+    display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: end;
+    gap: 6px;
     list-style-type: none;
-    position: absolute;
-    left:0px;
+    width: fit-content;
+}
+.date{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+.dateIcon{
+    font-size: 1.25rem;
+    color: #a48d07;
 }
 .MoreBtn:hover{
     border: 1px solid #efce;
 }
+.pubContent{
+    display: flex;
+    justify-content: center;
+}
 
+.pointerContainer{
+    margin-top: 18px;
+}
 @media (max-width:640px) {
     .pubCard{
         width: 520px;
@@ -76,6 +91,9 @@
 @media(max-width:400px){
     .pubCard{
         width:310px;
+    }
+    .details{
+        padding-bottom: 18px;
     }
 }
 @media (max-width:320px) {
