--- a/hedges-bridges/src/Styles/publications.css
+++ b/hedges-bridges/src/Styles/publications.css
@@ -65,6 +65,42 @@
     justify-content: center;
 }
 
+.mainPublication{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: column;
+    align-items: center;
+    /* background-color: #0D151C; */
+    position: relative;
+}
+article{
+    padding: 20px 65px;
+    text-align: justify;
+}
+
+article h1{
+    font-size: 1.6rem;
+    padding-top: 65px;
+    padding-bottom: 28px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+article h2{
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+article p{
+    text-align: justify;
+}
+
+.mainDetails{
+    position: absolute;
+    left: 0;
+}
 .pointerContainer{
     margin-top: 18px;
 }
@@ -82,6 +118,7 @@
     .pubCard{
         width:420px;
     }
+    
 }
 @media(max-width:450px){
     .pubCard{
