--- a/hedges-bridges/src/Styles/publications.css
+++ b/hedges-bridges/src/Styles/publications.css
@@ -1,35 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
+
 .pubContainer{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    margin-top: 28px;
+    margin-top: 32px;
     margin-bottom: 220px;
-    gap: 15px;
+    gap: 18px;
 }
 
 .pubCard{
     display: flex;
     justify-content: center;
     flex-direction: row;
-    width: 600px;
+    flex-wrap: wrap;
+    gap: 32px;
+    width: 100%;
     height: fit-content;
-    background-color: #0D151C;
-    /* background-image: url('../assets/pubImage.jpg'); */
-    /* background-position: center; */
-    background-size: cover;
-    border: 1 px solid #0D151C;
-    border-radius: 8px;
-    padding: 0 8px;
     box-sizing: border-box;
 }
+
 
 .introCard{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    width: 600px;
+    max-width: 320px;
     position: relative;
+    background-color: #0D151C;
+    border: 1 px solid #0D151C;
+    border-radius: 12px;
+    padding: 8px 22px;
+    overflow: hidden;
 }
 .Title{
     padding-top: 25px;
@@ -40,6 +48,14 @@
     text-align: center;
    
 }
+.Title, .pubContent p{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
 .details{
     display: flex;
     flex-direction: column;
@@ -47,6 +63,12 @@
     gap: 6px;
     list-style-type: none;
     width: fit-content;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .date{
     display: flex;
@@ -63,6 +85,8 @@
 .pubContent{
     display: flex;
     justify-content: center;
+    flex-grow: 1;
+    margin-bottom: 16px;
 }
 
 .mainPublication{
@@ -72,7 +96,6 @@
     flex-direction: column;
     justify-content: column;
     align-items: center;
-    /* background-color: #0D151C; */
     position: relative;
 }
 
@@ -112,12 +135,15 @@ article p{
 }
 
 .mainDetails{
+    padding-top: 25px;
     position: absolute;
-    left: 0;
+    left: 55px;
 }
+
 .pointerContainer{
     margin-top: 18px;
 }
+
 @media (max-width:640px) {
     .pubCard{
         width: 520px;
@@ -134,6 +160,9 @@ article p{
     }
     article{
         padding: 20px 25px;
+    }
+    .mainDetails{
+        left: 3px;
     }
 }
 @media(max-width:450px){
