--- a/hedges-bridges/src/Styles/Properties.css
+++ b/hedges-bridges/src/Styles/Properties.css
@@ -9,7 +9,7 @@
     margin-top: 32px;
     margin-bottom: 220px;
     gap: 18px;
-
+    position: relative;
 }
 
 .propCard{
@@ -20,31 +20,187 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+.imageViewerOverlay{
+    width: 800px;
+    height: fit-content;
+    background-color: #efce;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 999;
+    padding: 25px;
+    margin: 16px;
+    border-radius: 12px;
+}
+
+.imageViewerContent {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;
+    gap: 15px;
+} 
+.imageViewerContent img{
+   width: 80% ;
+    max-height: 300px;
+
+}
 .offerBtn:hover{
     background-color: #efce;
     border: 1px solid #efce;
     color: #0D151C;
 }
 
+button{
+    all:unset;
+    display: inline-block;
+    font-size: 18px;
+}
+.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    width: fit-content;
+    padding: 8px;
+    background-color: #0D151C;
+    border-radius: 8px;
+    gap: 42px;
+    margin-top: 28px;
+
+}
+.imageViewerOverlay p{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+}
+
+.imageViewerCloseBtn{
+    border: 1px solid #0D151C;
+    border-radius: 2px;
+    color: #0D151C;
+    padding: 4px;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+    position: absolute;
+    right: 10px;
+    top: 6px;
+
+}
+
+.description p{
+    color: #0D151C;
+    padding-top: 11px;
+    text-align: left;
+    text-wrap: wrap;
+}
 .propImage{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    max-width: 300px;
+    max-height: 300px;
     gap: 18px;
     padding:18px;
-}
-.propImage img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 12px;
-    max-width: 300px;
-    max-height: 300px;
+
+}
+.imageCount{
+    position: absolute;
+    top: 28%;
+    left: 45%;
+    right: 0;
+    background-color: #efce;
+    color: #0D151C;
+    padding: 8px;
+    height: 28px;
+    width: 48px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
 }
 
+.propDetails{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: justify;
+    box-sizing: border-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    letter-spacing: normal;
+    height: fit-content;
+}
+.propDetails p{
+    width: 100%;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    letter-spacing: normal;
+    text-align: left;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+ .modalContent ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+ }
+ .modalContent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8px;
+    position: relative;
+    padding: 15px;
+    gap: 25px;
+ }
+ 
+ .modalCloseBtn{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 80%;
+    color: #efce;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #a48d07;
+    border-radius: 2px;
+ }
+ .modalContent ul li{
+    display: flex;
+    flex-direction: row;
+    gap: 28px;
+ }
+
+ li span{
+    color: #a48d07;
+    font: 1.2em sans-serif;
+ }
+.imageContainer{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
 @media (max-width:1024px) {
     .propContainer{
         margin-bottom: 80px;
