--- a/hedges-bridges/src/Styles/Properties.css
+++ b/hedges-bridges/src/Styles/Properties.css
@@ -201,6 +201,28 @@ button{
     height: 200px;
     overflow: hidden;
 }
+
+@media(max-width:820px){
+
+    .imageViewerOverlay{
+        width: 90%;
+        margin-top: 42%;
+    }
+
+    .description p{
+        width: fit-content;
+        height: fit-content;
+        margin: 0 8px;
+    }
+
+}
+
+@media (max-width:350px) {
+    .Card{
+        width: fit-content;
+        margin: 0 8px;
+    }
+}
 @media (max-width:1024px) {
     .propContainer{
         margin-bottom: 80px;
