fixed button style errors

--- a/hedges-bridges/src/Styles/Properties.css
+++ b/hedges-bridges/src/Styles/Properties.css
@@ -53,10 +53,13 @@
     color: #0D151C;
 }
 
-.prevImage, .nextImage{
+button{
     all:unset;
     display: inline-block;
     font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .btns{
     display: flex;
