--- a/hedges-bridges/src/Styles/Properties.css
+++ b/hedges-bridges/src/Styles/Properties.css
@@ -41,6 +41,9 @@
     align-items: center; 
     flex-direction: column;
     gap: 15px;
+    width: 100%;
+    overflow: auto;
+    padding: 0 10px;
 } 
 .imageViewerContent img{
    width: 80% ;
@@ -102,14 +105,27 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 18px;
     width: 100%;
-    height: fit-content;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    text-wrap: wrap;
+
 }
+
 .description p{
+    display: flex;
+    justify-content: center;
     color: #0D151C;
     padding-top: 11px;
-    text-align: left;
+    text-align: center;
     text-wrap: wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+    box-sizing: border-box;
+
+
 }
 .propImage{
     display: flex;
@@ -213,6 +229,12 @@ button{
     overflow: hidden;
 }
 
+@media (max-width:1024px) {
+    .propContainer{
+        margin-bottom: 80px;
+    }
+}
+
 @media(max-width:820px){
 
     .imageViewerOverlay{
@@ -232,10 +254,5 @@ button{
     .Card{
         width: fit-content;
         margin: 0 8px;
-    }
-}
-@media (max-width:1024px) {
-    .propContainer{
-        margin-bottom: 80px;
     }
 }
