--- a/hedges-bridges/src/Styles/Archive.css
+++ b/hedges-bridges/src/Styles/Archive.css
@@ -14,6 +14,8 @@
     justify-content:center ;
     align-items: center;
     width: 100%;
+    height: fit-content;
+    gap: 18px;
 }
 
 .subCard{
@@ -21,8 +23,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #fece;
-    border-radius: 8px;
+    border: 3px solid;
+    border-image-source: linear-gradient(25deg,#efce, #a48d07,#0d151c);
+    border-image-slice: 1;
+    border-radius: 5px;
     padding: 22px;
+    width: 320px;
+    overflow: hidden;
+
+}
+.archDate{
+display: flex;
+justify-content: center;
+align-items: center;
+margin:12px 0;
+margin-right: 38px;
 
 }
