--- a/hedges-bridges/src/Styles/Search.css
+++ b/hedges-bridges/src/Styles/Search.css
@@ -2,19 +2,28 @@
     background-color: #a48d07;
     width: 100%;
     height: fit-content;
-    padding: 12px;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .searchBar{
-    width:80%;
-    display: flex;
-    justify-content: center;
-    height: 8vh;
-    padding-left: 55px;
-    border-radius: 25px;
-    border: 1 px solid #fece;
-    margin-top: 8px;
-    margin-left: 5%;
+    width:100%;
+    height: 7vh;
+    border-radius: 18px;
+    border: 1px solid #fece;
+    text-align: center;
+    line-height: normal;
     
    
+}
+
+.searchBar::placeholder{
+    text-align: center;
+    color: #a48d07;
+    letter-spacing: 2px;
+}
+
+@media (max-width:1024) {
 }
