--- a/hedges-bridges/src/Styles/publications.css
+++ b/hedges-bridges/src/Styles/publications.css
@@ -151,7 +151,7 @@ article h2{
     padding-top: 15px;
 }
 article p{
-    text-align: left;
+    text-align: justify;
 }
 
 .mainDetails{
@@ -169,7 +169,7 @@ article p{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    max-height: 50%;
     margin-top: 68px;
     object-fit: cover;
     border-radius: 12px;
