--- a/hedges-bridges/src/Styles/Admin.css
+++ b/hedges-bridges/src/Styles/Admin.css
@@ -85,10 +85,6 @@
   margin-top: 55px;
 }
 
-.custom-editor {
-  /* width: 100%; */
-  max-width: 600px;
-}
 
 @media (max-width:425px) {
   .Pform-container .formField input{
@@ -98,7 +94,7 @@
   .Pform-container .formField textarea{
       width: 285px;
   }
-  .Pform-container .custom-editor{
+  .Pform-container{
     width: 285px;
   }
 }
@@ -107,6 +103,7 @@
 @media (max-width:460px) {
   .Welcome-msg{
     text-align: center;
+    margin: 32px 10px 0 8px ;
   }
 }
 @media (max-width:680px) {
@@ -121,9 +118,6 @@
       width: 380px;
    }
 
-   .custom-editor{
-    width: 380px;
-   }
 
    .admin-container{
     margin-bottom: 8px;
