--- a/hedges-bridges/src/Styles/Admin.css
+++ b/hedges-bridges/src/Styles/Admin.css
@@ -91,6 +91,13 @@
   padding: 5px;
 }
 
+.editBtns{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
 @media (max-width:425px) {
   .Pform-container .formField input{
       width:285px
