--- a/hedges-bridges/src/Styles/ManageAll.css
+++ b/hedges-bridges/src/Styles/ManageAll.css
@@ -1,12 +1,14 @@
-.managaAll-container{
+.manageAll-container{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 32px;
     flex-direction: column;
-    margin: 32px 55px 220px 55px;
+    margin-bottom: 220px;
+    position: relative;
 }
+
 .alt-ContainerHeading{
     display: none;
 }
@@ -33,6 +35,7 @@
     align-items: center;
     gap: 36px;
     font-size: 32px;
+    margin-top: 34px;
     
 }
 
@@ -41,6 +44,9 @@
 }
 .Ma-Card{
     height: 420px;
+}
+.Card{
+    gap: 22px;
 }
 .title{
     text-align: center;
@@ -57,6 +63,42 @@
     border-radius: 15px;
 }
 
+.edit-form-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .manageForm-modal{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    color: #000000;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+  }
+
+  .manageForm-modal label{
+    color: #000000;
+  }
+
+.closeBtn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 26px;
+    font-size: 32px;
+    cursor: pointer;
+}
 @media (max-width:650px ) {
 .admin-containerHeading{
     display: none;
@@ -68,4 +110,12 @@
     margin-top: 56px;
 
 }
+}
+
+
+@media (max-width:350px) {
+    .Card{
+        width: fit-content;
+        margin: 0 8px;
+    }
 }
