--- a/hedges-bridges/src/Styles/publications.css
+++ b/hedges-bridges/src/Styles/publications.css
@@ -222,8 +222,10 @@ article p{
         height: 298px;
     } 
 }
-@media (max-width:320px) {
-    .pubCard{
-        width: 280px;
+
+@media (max-width:350px) {
+    .Card{
+        width: fit-content;
+        margin: 0 8px;
     }
 }
